# paribus-hospital-bulk-processing-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/v1/: hospitals.py
app/core/: config.py  exceptions.py  state.py
app/models/: domain.py  schemas.py
app/services/: csv_parser.py  hospital_client.py  processor.py
docs/: design_document.md  product_document.md  task_document.md  upstream_api_reference.md
tests/: conftest.py
tests/test_api/: test_hospitals.py
tests/test_services/: test_csv_parser.py  test_processor.py
